Take the Sonar findings on this branch's lines that name something real
Three diagnostics tests that only had to compile now say so with an
assertion; the two register descriptions in the CALL analysis are
constants; SourceLineIndex no longer has a method named like the record
keyword and uses Stream.toList(); two map assertions and a StringBuilder
check read as intended.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013PKFjsHd4FNg9jsupYSNaT